refactor: BoxContentMapper에서 ContentItem 반환에 MemberInteraction 추가